--- a/FrontEnd/src/app/module/cv/cv-manage/cv-manage.component.html
+++ b/FrontEnd/src/app/module/cv/cv-manage/cv-manage.component.html
@@ -16,7 +16,7 @@
 				</mat-card-content>
 				<mat-card-actions align="end">
 					<button mat-button color="primary" (click)="onClickView(cv.cvPdf)">View CV</button>
-					<button mat-button color="warn" (click)="onClickDelete(cv.cvPdf)">Delete CV</button>
+					<button mat-button color="warn" (click)="onClickDelete(cv)">Delete CV</button>
 				</mat-card-actions>
 			</mat-card>
 		</div>
