--- a/FRONTEND/src/app/module/reccer/interview/interview.component.html
+++ b/FRONTEND/src/app/module/reccer/interview/interview.component.html
@@ -141,10 +141,10 @@
 						<div class="mt-1 d-flex flex-row" style="line-height: 20px; font-weight: 400;">
 							<div>
 								<i class="bi bi-building-fill"></i>
-								{{item.address}}
+								{{item.addressOrStartURL}}
 							</div>
 							<div class="ms-auto">
-								{{item.detailLocation}}
+								{{item.detailLocationOrJoinURL}}
 							</div>
 						</div>
 					</div>
