--- a/FRONTEND/src/app/module/reccer/interviewer/interview-history/interview-history.component.html
+++ b/FRONTEND/src/app/module/reccer/interviewer/interview-history/interview-history.component.html
@@ -20,10 +20,10 @@
 				<div class="mt-1 row justify-content-lg-between" style="line-height: 20px; font-weight: 400;">
 					<div class="col-lg-7 col-12">
 						<i class="bi bi-building-fill"></i>
-						{{item.address}}
+						{{item.addressOrStartURL}}
 					</div>
 					<div class="col-lg-4 col-12 d-flex justify-content-lg-end">
-						{{item.detailLocation}}
+						{{item.detailLocationOrJoinURL}}
 					</div>
 				</div>
 			</div>
