--- a/FrontEnd/src/app/module/position/filter/filter.component.html
+++ b/FrontEnd/src/app/module/position/filter/filter.component.html
@@ -60,7 +60,7 @@
 					</mat-slider>
 				</div>
 
-				<div class="my-2">
+				<div class="my-2 mb-lg-0 mb-4">
 					<mat-form-field style="width: 100%;">
 						<mat-label>Time</mat-label>
 						<mat-date-range-input [rangePicker]="picker">
