--- a/FrontEnd/src/app/module/reccer/company/company.component.html
+++ b/FrontEnd/src/app/module/reccer/company/company.component.html
@@ -1,8 +1,27 @@
-<div class="container py-3">
-	<p class="h1 text-center">List Companies</p>
-	@for (company of companies; track $index) {
-	<p>
-		{{ company.companyName }}
-	</p>
-	}
+<div class="d-flex w-100 h-100 p-4">
+	<div>
+		<p class="h1">LIST OF FEATURED COMPANIES</p>
+	</div>
+	<div class="d-flex">
+		<div class="row">
+			<!-- <ng-container *ngFor="let company of companies; let i = index">
+				<div class="col-4" *ngIf="i % 3 === 0">
+					<div class="card p-4 mt-2 m-3 shadow">
+						<div class="d-flex justify-content-center">
+							<img
+								class="rounded-5"
+								width="100px"
+								height="100px"
+								src="{{ company.logo }}"
+								alt="{{ company.companyName }} logo" />
+						</div>
+						<div class="mt-3 d-flex flex-column">
+							<div class="heading fs-4">{{ company.companyName }}</div>
+							<div class="heading fs-4">Address: {{ company.address }}</div>
+						</div>
+					</div>
+				</div>
+			</ng-container> -->
+		</div>
+	</div>
 </div>
