Work with GG Meet: try to deploy

--- a/FRONTEND/src/app/shared/component/gg-meet/call-back/call-back.component.html
+++ b/FRONTEND/src/app/shared/component/gg-meet/call-back/call-back.component.html
@@ -1,13 +1,4 @@
-<div id="google-login-button" class="login-button btn btn-primary" (click)="this.log()">CONSOLE LOG</div>
-@if (this.fragment !== null) {
 <div class="w-100 d-flex flex-column align-items-center pb-4 justify-content-center" style="height: 100vh;">
-	<div class="fs-4 fw-bold">LOGIN SUCCESSFULLY</div>
-	<div class="p-4">Please close this window</div>
+	<div class="fs-4 fw-bold">CLOSE WINDOW</div>
+	<div class="p-4">***Please close this window if this window not auto close***</div>
 </div>
-}
-@else {
-<div class="w-100 d-flex flex-column align-items-center pb-4 justify-content-center" style="height: 100vh;">
-	<div class="fs-4 fw-bold">LOGIN FAILED</div>
-	<div class="p-4">Please close this window and try again</div>
-</div>
-}
