--- a/FRONTEND/src/app/module/reccer/interview/add-form/add-form.component.html
+++ b/FRONTEND/src/app/module/reccer/interview/add-form/add-form.component.html
@@ -1,5 +1,8 @@
 <div class="d-flex flex-column w-100 h-100"
 	style="padding: 30px; background: linear-gradient(to right, #364cc7, #cf6868); height: 500px; overflow-y: scroll;">
+	<div class="login-button">
+		<div id="google-login-button" class="login-button btn btn-primary" (click)="this.log()">CONSOLE LOG</div>
+	</div>
 	@if (this.foundInterview) {
 	<div class="fs-4 mx-auto text-white mb-3" style="font-weight: 500;">EDIT INTERVIEW</div>
 	}
@@ -62,13 +65,33 @@
 
 		</div>
 
-		<section class="w-100"
+		<section class="w-100 p-3 mb-3"
 			style="background-color: #ffffff; border-top-left-radius: 0.25rem; border-top-right-radius: 0.25rem;">
-			<p class="p-3"><mat-slide-toggle formControlName="onlineMeeting"> Online Meeting</mat-slide-toggle>
+			<p class="my-2"><mat-slide-toggle formControlName="onlineMeeting"> Online Meeting</mat-slide-toggle>
 			</p>
+			@if (this.ggMeetService.isLoggedIn) {
+			<div class="row align-items-center">
+				<div class="col-6 fs-5 fw-bold">
+					Current Google Account:
+				</div>
+				<div class="col-6 row">
+					<div class="col-7 d-flex flex-row align-items-center ">
+						{{this.ggMeetService.identityClaims['name']}}
+						<img width="35px" height="35px" class="ms-2 rounded-5"
+							[src]="this.ggMeetService.identityClaims['picture']" />
+					</div>
+					<button class="col-5 px-3" (click)="this.ggMeetService.logout()" mat-raised-button
+						color="primary">Logout</button>
+				</div>
+			</div>
+			}
+			@else {
+			<button class="px-3" (click)="this.googleLogin()" mat-raised-button color="accent">Login With
+				Google</button>
+			}
 		</section>
 
-		<mat-form-field class="w-100">
+		<mat-form-field class=" w-100">
 			<mat-label>Address or Start URL For Interviewer</mat-label>
 			<input type="text" style="resize: none;" matInput placeholder="Address or Start URL For Interviewer"
 				formControlName="addressOrStartURL" />
