--- a/FRONTEND/src/app/module/reccer/interview/interview.component.html
+++ b/FRONTEND/src/app/module/reccer/interview/interview.component.html
@@ -1,3 +1,7 @@
+<div>
+	<button mat-button class="m-4" (click)="login()">LOGIN</button>
+	<button mat-button class="m-4" (click)="log()">LOG</button>
+</div>
 <div class="container" style="margin-top: 50px; margin-bottom: 50px;">
 	<div class="w-100 d-flex flex-row justify-content-center">
 		<div class="fs-3 p-4 " style="margin: auto;">{{this.recruiter?.company?.companyName |
@@ -37,6 +41,16 @@
 				<app-autocomplete [formField]="'positionId'" [valueField]="'positionId'" [labelField]="'positionName'"
 					[placeholder]="'Please select'" [label]="'Position'" [observableOptions]="this.positionData$"
 					[formGroup]="this.filterForm"></app-autocomplete>
+
+
+				<mat-form-field class="w-100">
+					<mat-label>Type</mat-label>
+					<mat-select formControlName="interviewType">
+						<mat-option [value]="null"></mat-option>
+						<mat-option [value]="this.interview_Type.FACE2FACE">FACE TO FACE</mat-option>
+						<mat-option [value]="this.interview_Type.ONLINE_GG_MEET">ONLINE BY GG MEET</mat-option>
+					</mat-select>
+				</mat-form-field>
 
 				<mat-form-field class="w-100">
 					<mat-label>Status</mat-label>
@@ -137,6 +151,23 @@
 								5)}} -
 								{{item.endTime?.slice(0, 5)}}
 							</div>
+						</div>
+						<div class="py-1">
+							@switch (item.interviewType) {
+							@case (this.interview_Type.FACE2FACE) {
+							<div class="p-2 rounded-2 bg-warning fw-bold" style="width: fit-content;">
+								FACE TO FACE
+							</div>
+							}
+							@case (this.interview_Type.ONLINE_GG_MEET) {
+							<div class="p-2 rounded-2 fw-bold bg-success text-white" style="width: fit-content;">
+								ONLINE GOOGLE MEET
+							</div>
+							}
+							@default {
+							not match
+							}
+							}
 						</div>
 						<div class="mt-1 d-flex flex-row" style="line-height: 20px; font-weight: 400;">
 							<div>
