--- a/FRONTEND/src/app/module/reccer/interviewer/interview-history/interview-history.component.html
+++ b/FRONTEND/src/app/module/reccer/interviewer/interview-history/interview-history.component.html
@@ -17,6 +17,23 @@
 						{{item.endTime?.slice(0, 5)}}
 					</div>
 				</div>
+				<div class="py-1">
+					@switch (item.interviewType) {
+					@case (this.interview_Type.FACE2FACE) {
+					<div class="p-2 rounded-2 bg-warning fw-bold" style="width: fit-content;">
+						FACE TO FACE
+					</div>
+					}
+					@case (this.interview_Type.ONLINE_GG_MEET) {
+					<div class="p-2 rounded-2 fw-bold bg-success text-white" style="width: fit-content;">
+						ONLINE GOOGLE MEET
+					</div>
+					}
+					@default {
+					not match
+					}
+					}
+				</div>
 				<div class="mt-1 row justify-content-lg-between" style="line-height: 20px; font-weight: 400;">
 					<div class="col-lg-7 col-12">
 						<i class="bi bi-building-fill"></i>
