--- a/FrontEnd/src/app/layout/header/header.component.html
+++ b/FrontEnd/src/app/layout/header/header.component.html
@@ -22,7 +22,7 @@
 						<mat-icon class="mat-18">category</mat-icon>
 						Jobs with category
 					</button>
-					<button mat-menu-item (click)="handleRouteToJobs('applied-jobs')">
+					<button mat-menu-item (click)="handleRouteToJobs('applied jobs')">
 						Jobs applied
 						<mat-icon class="mat-18">mail</mat-icon>
 					</button>
