--- a/FRONTEND/src/app/module/application/candidate-job-applied/candidate-job-applied.component.html
+++ b/FRONTEND/src/app/module/application/candidate-job-applied/candidate-job-applied.component.html
@@ -1,62 +1,1 @@
-<div class="container mt-4">
-	<h2>Applied Jobs</h2>
-
-	<mat-form-field>
-		<mat-label>Filter</mat-label>
-		<input matInput (keyup)="applyFilter($event)" placeholder="Ex. Developer" #input />
-	</mat-form-field>
-
-	<div class="mat-elevation-z8">
-		<table mat-table [dataSource]="dataSource!" matSort>
-			<!-- Position Column -->
-			<ng-container matColumnDef="position">
-				<th mat-header-cell *matHeaderCellDef mat-sort-header>Position</th>
-				<td mat-cell *matCellDef="let job">{{ job.position }}</td>
-			</ng-container>
-
-			<!-- Company Column -->
-			<ng-container matColumnDef="company">
-				<th mat-header-cell *matHeaderCellDef mat-sort-header>Company</th>
-				<td mat-cell *matCellDef="let job">{{ job.company }}</td>
-			</ng-container>
-
-			<!-- Applied Date Column -->
-			<ng-container matColumnDef="appliedDate">
-				<th mat-header-cell *matHeaderCellDef mat-sort-header>Applied Date</th>
-				<td mat-cell *matCellDef="let job">{{ job.appliedDate | date }}</td>
-			</ng-container>
-
-			<!-- Status Column -->
-			<ng-container matColumnDef="status">
-				<th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
-				<td mat-cell *matCellDef="let job">
-					<mat-chip-listbox>
-						<mat-chip [color]="job.status === 'Rejected' ? 'warn' : 'primary'" selected>{{
-							job.status
-						}}</mat-chip>
-					</mat-chip-listbox>
-				</td>
-			</ng-container>
-
-			<!-- Actions Column -->
-			<ng-container matColumnDef="actions">
-				<th mat-header-cell *matHeaderCellDef>Actions</th>
-				<td mat-cell *matCellDef="let job">
-					<button mat-icon-button color="primary" aria-label="View details">
-						<mat-icon>visibility</mat-icon>
-					</button>
-				</td>
-			</ng-container>
-
-			<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-			<tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-
-			<!-- Row shown when there is no matching data. -->
-			<tr class="mat-row" *matNoDataRow>
-				<td class="mat-cell" colspan="4">No data matching the filter "{{ input.value }}"</td>
-			</tr>
-		</table>
-
-		<mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of applied jobs"></mat-paginator>
-	</div>
-</div>
+<p>candidate-job-applied works!</p>
