--- a/FrontEnd/src/app/module/position-detail/position-detail/position-detail.component.html
+++ b/FrontEnd/src/app/module/position-detail/position-detail/position-detail.component.html
@@ -19,51 +19,66 @@
 									alt="{{ fetchPosition?.company?.companyName + ' logo' }}" />
 							</div>
 							<div style="width: 40%; margin-left: 4%">
-								<div class="fs-3"
-									style="font-weight: 500; cursor: pointer; margin-bottom: 15px; word-break: break-all;">
+								<div
+									class="fs-3"
+									style="
+										font-weight: 500;
+										cursor: pointer;
+										margin-bottom: 15px;
+										word-break: break-all;
+									">
 									{{ fetchPosition?.positionName | uppercase }}
 								</div>
-								<div class="custom-row rounded-2"
-									style="word-break: break-all; padding: 3px 2px 2px 2px; background-color: rgb(253, 255, 198) ;width: fit-content;">
-									{{ fetchPosition?.level?.levelName }}</div>
-								<div class="custom-row" style="color: blue; word-break: break-all;">
 								<div
 									class="custom-row rounded-2"
 									style="
+										word-break: break-all;
 										padding: 3px 2px 2px 2px;
 										background-color: rgb(253, 255, 198);
 										width: fit-content;
 									">
 									{{ fetchPosition?.level?.levelName }}
 								</div>
-								<div class="custom-row" style="color: blue">
-									{{ fetchPosition?.company?.companyName }}
-								</div>
-								<div class="custom-row" style="color: rgb(251, 115, 74); word-break: break-all;">
-									@if (fetchPosition?.minSalary && fetchPosition?.maxSalary) {
-									{{ fetchPosition?.minSalary + '-' + fetchPosition?.maxSalary }}
-									} @else if (fetchPosition?.minSalary) {
-									{{ 'Above ' + fetchPosition?.minSalary }}
-									} @else if (fetchPosition?.maxSalary) {
-									{{ 'Up to ' + fetchPosition?.maxSalary }}
-									} @else { Negotiable }
-								</div>
-								<div class="custom-row" style="color: black; word-break: break-all;">
-									Hiring quantity: {{ fetchPosition?.maxHiringQty }}
-								</div>
-								<div class="custom-row" style="color: rgb(100, 100, 100); word-break: break-all;">
-									<i class="bi bi-calendar3"></i>
-									{{ fetchPosition?.startDate | date : 'dd/MM/yyyy' }} -
-									{{ fetchPosition?.endDate | date : 'dd/MM/yyyy' }}
-								</div>
-								<div
-									class="custom-row rounded-2"
-									style="
-										padding: 2px 2px 2px 2px;
-										background-color: rgb(224, 224, 224);
-										width: fit-content; word-break: break-all;
-									">
-									{{ fetchPosition?.language?.languageName }}
+								<div class="custom-row" style="color: blue; word-break: break-all">
+									<div
+										class="custom-row rounded-2"
+										style="
+											padding: 3px 2px 2px 2px;
+											background-color: rgb(253, 255, 198);
+											width: fit-content;
+										">
+										{{ fetchPosition?.level?.levelName }}
+									</div>
+									<div class="custom-row" style="color: blue">
+										{{ fetchPosition?.company?.companyName }}
+									</div>
+									<div class="custom-row" style="color: rgb(251, 115, 74); word-break: break-all">
+										@if (fetchPosition?.minSalary && fetchPosition?.maxSalary) {
+										{{ fetchPosition?.minSalary + '-' + fetchPosition?.maxSalary }}
+										} @else if (fetchPosition?.minSalary) {
+										{{ 'Above ' + fetchPosition?.minSalary }}
+										} @else if (fetchPosition?.maxSalary) {
+										{{ 'Up to ' + fetchPosition?.maxSalary }}
+										} @else { Negotiable }
+									</div>
+									<div class="custom-row" style="color: black; word-break: break-all">
+										Hiring quantity: {{ fetchPosition?.maxHiringQty }}
+									</div>
+									<div class="custom-row" style="color: rgb(100, 100, 100); word-break: break-all">
+										<i class="bi bi-calendar3"></i>
+										{{ fetchPosition?.startDate | date : 'dd/MM/yyyy' }} -
+										{{ fetchPosition?.endDate | date : 'dd/MM/yyyy' }}
+									</div>
+									<div
+										class="custom-row rounded-2"
+										style="
+											padding: 2px 2px 2px 2px;
+											background-color: rgb(224, 224, 224);
+											width: fit-content;
+											word-break: break-all;
+										">
+										{{ fetchPosition?.language?.languageName }}
+									</div>
 								</div>
 							</div>
 						</div>
@@ -71,149 +86,163 @@
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="" style="margin-left: 14%; margin-right: 14%; margin-top: 160px">
-	<div class="pt-2" style="margin-left: 14%; margin-right: 14%; margin-top: 110px">
-		<div>
-			@if (this.curentUserRoles?.length == 0 || this.curentUserRoles?.includes('Candidate')) {
-			@if(this.isAvailable == "outOfDate"){
-			<button mat-raised-button color="primary" class="w-100 py-3" disabled>
-				<i class="fa-regular fa-paper-plane px-3"></i>
-				Apply now
-			</button>
-			} @else {
-			<button mat-raised-button color="primary" class="w-100 py-3" (click)="handleClickApply()">
-				<i class="fa-regular fa-paper-plane px-3"></i>
-				@if (this.isAvailable === "available") {Apply now} @else if (this.isAvailable === "reapply") {Reapply}
-			</button>
-			} }
-		</div>
-		<div class="fs-5 d-flex flex-column" style="background-color: rgb(236, 236, 236); height: 100%">
-			<mat-tab-group dynamicHeight mat-stretch-tabs="false" mat-align-tabs="start" animationDuration="0ms">
-				<mat-tab>
-					<ng-template mat-tab-label>
-						<span style="font-weight: 600; font-size: 18px">Information</span>
-					</ng-template>
-					<div class="rounded-3 p-4" style="background-color: rgb(255, 255, 255)">
-						<div style="font-size: 24px; margin-top: 10px">Description</div>
-						<div class="mt-3" style="line-height: 1.5; font-size: 16px">
-							{{ fetchPosition?.description }}
-						</div>
-						<div style="font-size: 24px; margin-top: 30px" class="mb-3">Requirements</div>
-						@for (item of this.fetchPosition?.requirements; track item) {
-						<li style="line-height: 1.5; font-size: 16px; margin-top: 8px">
-							{{ item.skill?.skillName }} - {{ item.skill?.description }}:
-						</li>
-						<div style="font-size: 16px; margin-left: 60px; line-height: 1.5">
-							<div>
-								{{ item.experience }}
-							</div>
-							<div>
-								{{ item.notes }}
-							</div>
-						</div>
-						}
-					</div>
-				</mat-tab>
-				<mat-tab>
-					<ng-template mat-tab-label>
-						<span style="font-weight: 600; font-size: 18px">About Company</span>
-					</ng-template>
-					<div class="rounded-3 p-4 d-flex flex-row" style="background-color: rgb(255, 255, 255)">
-						<div class="me-3" style="border: 1px solid #1c395f; width: 60%; border-radius: 10px">
-							<div
-								class="p-3"
-								style="
-									font-weight: 700;
-									width: 100%;
-									background-color: #1c395f;
-									color: white;
-									border-top-left-radius: 9px;
-									border-top-right-radius: 9px;
-								">
-								Company Introduction
-							</div>
-							<div class="p-3">
-								<div style="margin-top: 20px; font-size: 24px; margin-bottom: 40px">
-									{{ fetchPosition?.company?.companyName }}
+		<div class="" style="margin-left: 14%; margin-right: 14%; margin-top: 160px">
+			<div class="pt-2" style="margin-left: 14%; margin-right: 14%; margin-top: 110px">
+				<div>
+					@if (this.curentUserRoles?.length == 0 || this.curentUserRoles?.includes('Candidate')) {
+					@if(this.isAvailable == "outOfDate"){
+					<button mat-raised-button color="primary" class="w-100 py-3" disabled>
+						<i class="fa-regular fa-paper-plane px-3"></i>
+						Apply now
+					</button>
+					} @else {
+					<button mat-raised-button color="primary" class="w-100 py-3" (click)="handleClickApply()">
+						<i class="fa-regular fa-paper-plane px-3"></i>
+						@if (this.isAvailable === "available") {Apply now} @else if (this.isAvailable === "reapply")
+						{Reapply}
+					</button>
+					} }
+				</div>
+				<div class="fs-5 d-flex flex-column" style="background-color: rgb(236, 236, 236); height: 100%">
+					<mat-tab-group
+						dynamicHeight
+						mat-stretch-tabs="false"
+						mat-align-tabs="start"
+						animationDuration="0ms">
+						<mat-tab>
+							<ng-template mat-tab-label>
+								<span style="font-weight: 600; font-size: 18px">Information</span>
+							</ng-template>
+							<div class="rounded-3 p-4" style="background-color: rgb(255, 255, 255)">
+								<div style="font-size: 24px; margin-top: 10px">Description</div>
+								<div class="mt-3" style="line-height: 1.5; font-size: 16px">
+									{{ fetchPosition?.description }}
 								</div>
-								<div style="font-size: 18px; margin-top: 10px">
-									Company description:
-									<span class="mt-3" style="line-height: 1.5; font-size: 16px">
-										Company description
-									</span>
+								<div style="font-size: 24px; margin-top: 30px" class="mb-3">Requirements</div>
+								@for (item of this.fetchPosition?.requirements; track item) {
+								<li style="line-height: 1.5; font-size: 16px; margin-top: 8px">
+									{{ item.skill?.skillName }} - {{ item.skill?.description }}:
+								</li>
+								<div style="font-size: 16px; margin-left: 60px; line-height: 1.5">
+									<div>
+										{{ item.experience }}
+									</div>
+									<div>
+										{{ item.notes }}
+									</div>
 								</div>
-								<div style="font-size: 18px; margin-top: 10px">
-									Website:
-									<a href="{{ fetchPosition?.company?.website }}" class="mt-3"
-										style="line-height: 1.5; font-size: 16px; word-break: break-all;">
-									<a
+								}
+							</div>
+						</mat-tab>
+						<mat-tab>
+							<ng-template mat-tab-label>
+								<span style="font-weight: 600; font-size: 18px">About Company</span>
+							</ng-template>
+							<div class="rounded-3 p-4 d-flex flex-row" style="background-color: rgb(255, 255, 255)">
+								<div class="me-3" style="border: 1px solid #1c395f; width: 60%; border-radius: 10px">
+									<div
+										class="p-3"
+										style="
+											font-weight: 700;
+											width: 100%;
+											background-color: #1c395f;
+											color: white;
+											border-top-left-radius: 9px;
+											border-top-right-radius: 9px;
+										">
+										Company Introduction
+									</div>
+									<div class="p-3">
+										<div style="margin-top: 20px; font-size: 24px; margin-bottom: 40px">
+											{{ fetchPosition?.company?.companyName }}
+										</div>
+										<div style="font-size: 18px; margin-top: 10px">
+											Company description:
+											<span class="mt-3" style="line-height: 1.5; font-size: 16px">
+												Company description
+											</span>
+										</div>
+										<div style="font-size: 18px; margin-top: 10px">
+											Website:
+											<a
+												href="{{ fetchPosition?.company?.website }}"
+												class="mt-3"
+												style="line-height: 1.5; font-size: 16px; word-break: break-all">
+												<!-- <a
 										href="{{ fetchPosition?.company?.website }}"
 										class="mt-3"
-										style="line-height: 1.5; font-size: 16px">
-										{{ fetchPosition?.company?.website }}
-									</a>
+										style="line-height: 1.5; font-size: 16px"> -->
+												{{ fetchPosition?.company?.website }}
+											</a>
+										</div>
+									</div>
 								</div>
-							</div>
-						</div>
-						<div style="height: fit-content; border: 1px solid #1c395f; width: 40%; border-radius: 10px">
-							<div
-								class="p-3"
-								style="
-									font-weight: 600;
-									width: 100%;
-									background-color: #1c395f;
-									color: white;
-									border-top-left-radius: 9px;
-									border-top-right-radius: 9px;
-								">
-								Contact
-							</div>
-							<div class="p-3">
-								<div style="font-size: 18px">
-									<i class="bi bi-house-door-fill"></i>
-									<span class="mt-3 ms-2" style="line-height: 1.5; font-size: 16px">
-										{{ fetchPosition?.company?.address }}
-									</span>
-								</div>
-								<div style="font-size: 18px; margin-top: 10px">
-									<i class="bi bi-envelope-fill"></i>
-									<a
-										href="https://mail.google.com/mail/?view=cm&fs=1&to={{
-											fetchPosition?.company?.email
-										}}" class="mt-3 ms-2" style="line-height: 1.5; font-size: 16px; word-break: break-all;">{{
-										fetchPosition?.company?.email }}
-										}}"
-										class="mt-3 ms-2"
-										style="line-height: 1.5; font-size: 16px"
-										>{{ fetchPosition?.company?.email }}
-									</a>
-								</div>
-								<div style="font-size: 18px; margin-top: 10px">
-									<i class="bi bi-telephone-fill"></i>
-									<a href="tel:{{ fetchPosition?.company?.phone }}" class="mt-3 ms-2"
-										style="line-height: 1.5; font-size: 16px; word-break: break-all;">{{
-										fetchPosition?.company?.phone }}
-									<a
+								<div
+									style="
+										height: fit-content;
+										border: 1px solid #1c395f;
+										width: 40%;
+										border-radius: 10px;
+									">
+									<div
+										class="p-3"
+										style="
+											font-weight: 600;
+											width: 100%;
+											background-color: #1c395f;
+											color: white;
+											border-top-left-radius: 9px;
+											border-top-right-radius: 9px;
+										">
+										Contact
+									</div>
+									<div class="p-3">
+										<div style="font-size: 18px">
+											<i class="bi bi-house-door-fill"></i>
+											<span class="mt-3 ms-2" style="line-height: 1.5; font-size: 16px">
+												{{ fetchPosition?.company?.address }}
+											</span>
+										</div>
+										<div style="font-size: 18px; margin-top: 10px">
+											<i class="bi bi-envelope-fill"></i>
+											<a
+												href="https://mail.google.com/mail/?view=cm&fs=1&to={{
+													fetchPosition?.company?.email
+												}}"
+												class="mt-3 ms-2"
+												style="line-height: 1.5; font-size: 16px; word-break: break-all"
+												>{{ fetchPosition?.company?.email }}
+											</a>
+										</div>
+										<div style="font-size: 18px; margin-top: 10px">
+											<i class="bi bi-telephone-fill"></i>
+											<a
+												href="tel:{{ fetchPosition?.company?.phone }}"
+												class="mt-3 ms-2"
+												style="line-height: 1.5; font-size: 16px; word-break: break-all"
+												>{{ fetchPosition?.company?.phone }}
+												<!-- <a
 										href="tel:{{ fetchPosition?.company?.phone }}"
 										class="mt-3 ms-2"
 										style="line-height: 1.5; font-size: 16px"
-										>{{ fetchPosition?.company?.phone }}
-									</a>
+										>{{ fetchPosition?.company?.phone }} -->
+											</a>
+										</div>
+									</div>
 								</div>
 							</div>
-						</div>
-					</div>
-				</mat-tab>
-				<mat-tab disabled>
-					<ng-template mat-tab-label>
-						<span style="font-weight: 500; font-size: 18px">Jobs from company</span>
-					</ng-template>
-					<div class="rounded-3 p-4" style="background-color: rgb(255, 255, 255)">
-						<div class="mt-3" style="line-height: 1.5; font-size: 16px">Jobs from company</div>
-					</div>
-				</mat-tab>
-			</mat-tab-group>
+						</mat-tab>
+						<mat-tab disabled>
+							<ng-template mat-tab-label>
+								<span style="font-weight: 500; font-size: 18px">Jobs from company</span>
+							</ng-template>
+							<div class="rounded-3 p-4" style="background-color: rgb(255, 255, 255)">
+								<div class="mt-3" style="line-height: 1.5; font-size: 16px">Jobs from company</div>
+							</div>
+						</mat-tab>
+					</mat-tab-group>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
