--- a/FrontEnd/src/app/module/position-detail/position-detail/position-detail.component.html
+++ b/FrontEnd/src/app/module/position-detail/position-detail/position-detail.component.html
@@ -29,7 +29,7 @@
 									">
 									{{ fetchPosition?.positionName | uppercase }}
 								</div>
-								<div
+								<!-- <div
 									class="custom-row rounded-2"
 									style="
 										word-break: break-all;
@@ -38,7 +38,7 @@
 										width: fit-content;
 									">
 									{{ fetchPosition?.level?.levelName }}
-								</div>
+								</div> -->
 								<div class="custom-row" style="color: blue; word-break: break-all">
 									<div
 										class="custom-row rounded-2"
