--- a/FRONTEND/src/app/module/reccer/interviewer/interviewer.component.html
+++ b/FRONTEND/src/app/module/reccer/interviewer/interviewer.component.html
@@ -6,9 +6,18 @@
 		</div>
 	</div>
 
-	<div class="mt-2 d-flex me-4 flex-row-reverse fs-3">
-		Result count: {{this.fetchedInterviewers?.length}}
+	<div class="row g-0">
+		<div class="col-6">
+			<button mat-raised-button class="fs-5 p-2" color="primary" (click)=" this.openAddForm()">Add
+				Interviewer</button>
+		</div>
+		<div class="col-6">
+			<div class="mt-2 w-100 d-flex me-4 flex-row-reverse fs-3">
+				Result count: {{this.fetchedInterviewers?.length}}
+			</div>
+		</div>
 	</div>
+
 	<div class="row" style="height: fit-content;">
 		<div class="col-lg-3 p-2 rounded-2 mt-4"
 			style="height: fit-content; border: green solid 1px; background: linear-gradient(to right, #4b07a3, #1838ed);">
@@ -116,6 +125,10 @@
 							<button mat-icon-button matTooltip="All interviews"
 								(click)="openInterviewsHistoryDialog(item.interviewerId, '100ms', '0ms')">
 								<mat-icon>list</mat-icon>
+							</button>
+							<button mat-icon-button matTooltip="Delete this interviewer"
+								(click)="openDeleteFormDialog(item, '100ms', '0ms')">
+								<mat-icon style="color: red;">delete</mat-icon>
 							</button>
 						</div>
 					</div>
