--- a/FRONTEND/src/app/module/interview/list-interview/list-interview.component.html
+++ b/FRONTEND/src/app/module/interview/list-interview/list-interview.component.html
@@ -45,27 +45,34 @@
 									<mat-select
 										[(ngModel)]="statusChoose"
 										(selectionChange)="handleChooseStatus($event.value)">
-										<mat-option [value]="'Not start'">
-											<mat-icon>event_note</mat-icon> Not start
+										<mat-option [value]="getStatusValue.PENDING">
+											<mat-icon>access_time</mat-icon> Pending
 										</mat-option>
-										<mat-option [value]="'Finished'">
-											<mat-icon>sports_score</mat-icon> Finished
+										<mat-option [value]="getStatusValue.PASSED">
+											<mat-icon>check_circle</mat-icon> Passed
+										</mat-option>
+										<mat-option [value]="getStatusValue.PASSED_N_MAILED">
+											<mat-icon>local_shipping</mat-icon> Passed and mailed
+										</mat-option>
+										<mat-option [value]="getStatusValue.FAILED">
+											<mat-icon>error</mat-icon> Failed
 										</mat-option>
 									</mat-select>
 								</mat-form-field>
 							</div>
 
-							<div *ngIf="statusChoose === 'Finished'" class="col-6 col-md-2 mb-3">
+							<div *ngIf="statusChoose" class="col-6 col-md-2 mb-3">
 								<mat-form-field appearance="fill" class="w-100">
-									<mat-label>Result...</mat-label>
+									<mat-label>Type...</mat-label>
 									<mat-select
-										[(ngModel)]="priorityChoose"
-										(selectionChange)="handleChooseResult($event.value)">
-										<mat-option [value]="'Pending'">
-											<mat-icon>more_horiz</mat-icon> Pending
+										[(ngModel)]="typeChoose"
+										(selectionChange)="handleChooseType($event.value)">
+										<mat-option [value]="getTypeValue.FACE2FACE">
+											<mat-icon>face_unlock</mat-icon> Face to Face
 										</mat-option>
-										<mat-option [value]="'Passed'"> <mat-icon>done</mat-icon> Passed </mat-option>
-										<mat-option [value]="'Failed'"> <mat-icon>close</mat-icon> Failed </mat-option>
+										<mat-option [value]="getTypeValue.ONLINE_GG_MEET">
+											<mat-icon>smartphone</mat-icon> Online (Google Meet)
+										</mat-option>
 									</mat-select>
 								</mat-form-field>
 							</div>
@@ -80,8 +87,80 @@
 						<th mat-header-cell *matHeaderCellDef>ID</th>
 						<td mat-cell *matCellDef="let interview">
 							<a [routerLink]="['./', interview.InterviewId]">
-								{{ interview.InterviewId.slice(0, 6) + '...' }}
+								{{ interview.interviewId!.slice(0, 6) + '...' }}
 							</a>
+						</td>
+					</ng-container>
+					<ng-container matColumnDef="CandidateName">
+						<th mat-header-cell *matHeaderCellDef>Candidate name</th>
+						<td mat-cell *matCellDef="let interview">
+							<a (click)="handleProfileDetailClick(interview.application!.cv!.candidate!.candidateId!)">
+								{{ interview.application!.cv!.candidate!.user!.fullName }}
+							</a>
+						</td>
+					</ng-container>
+					<ng-container matColumnDef="MeetingDate">
+						<th mat-header-cell *matHeaderCellDef>Meeting Date</th>
+						<td mat-cell *matCellDef="let interview">
+							{{ interview.meetingDate | date : 'dd/MM/yyyy' }}
+						</td>
+					</ng-container>
+					<ng-container matColumnDef="StartTime">
+						<th mat-header-cell *matHeaderCellDef>Start time</th>
+						<td mat-cell *matCellDef="let interview">
+							{{ interview.startTime }}
+						</td>
+					</ng-container>
+					<ng-container matColumnDef="Location">
+						<th mat-header-cell *matHeaderCellDef>Location</th>
+						<td mat-cell *matCellDef="let interview">
+							{{ interview.addressOrStartURL }}
+						</td>
+					</ng-container>
+					<ng-container matColumnDef="Type">
+						<th mat-header-cell *matHeaderCellDef>Type</th>
+						<td mat-cell *matCellDef="let interview">
+							<span
+								class="p-2 rounded text-white"
+								[ngClass]="{
+									'bg-danger ': interview.interviewType !== getTypeValue.FACE2FACE,
+									'bg-primary': interview.interviewType === getTypeValue.FACE2FACE,
+									'bg-warning': interview.interviewType === getTypeValue.ONLINE_GG_MEET
+								}">
+								{{
+									interview.notes === getTypeValue.FACE2FACE ? 'Face to Face' : 'Online (Google Meet)'
+								}}
+							</span>
+						</td>
+					</ng-container>
+					<ng-container matColumnDef="Status">
+						<th mat-header-cell *matHeaderCellDef>Status</th>
+						<td mat-cell *matCellDef="let interview">
+							<span
+								class="p-2 rounded text-white"
+								[ngClass]="{
+									'bg-danger': interview.status !== getStatusValue.PASSED,
+									'bg-warning': interview.status === getStatusValue.PASSED,
+									'bg-primary': interview.status === getStatusValue.PASSED_N_MAILED,
+									'text-dark bg-white': interview.status === getStatusValue.FAILED
+								}">
+								{{
+									interview.status === getStatusValue.PASSED
+										? 'Passed'
+										: interview.status === getStatusValue.PASSED_N_MAILED
+										? 'Passed and mailed'
+										: interview.status === getStatusValue.FAILED
+										? 'Failed'
+										: 'Pending'
+								}}
+							</span>
+						</td>
+					</ng-container>
+
+					<ng-container matColumnDef="Priority">
+						<th mat-header-cell *matHeaderCellDef>Priority</th>
+						<td mat-cell *matCellDef="let interview">
+							{{ interview.priority }}
 						</td>
 					</ng-container>
 
