--- a/FRONTEND/src/app/module/admin/generic/generic-table.component.html
+++ b/FRONTEND/src/app/module/admin/generic/generic-table.component.html
@@ -1,6 +1,12 @@
 <div class="pb-3">
-	<button mat-raised-button color="primary" (click)="createData()"
-		[disabled]="this.actions !== undefined && !this.actions.includes('create')" class="w-100">Create</button>
+	<button
+		mat-raised-button
+		color="primary"
+		(click)="createData()"
+		[disabled]="this.actions !== undefined && !this.actions.includes('create')"
+		class="w-100">
+		Create
+	</button>
 </div>
 
 <mat-form-field>
@@ -12,18 +18,20 @@
 	<table mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>
 		@for (col of listProps; track $index) {
 		<ng-container matColumnDef="{{ displayedColumns[$index] }}">
-			<th mat-header-cell *matHeaderCellDef mat-sort-header="{{col}}">{{ displayedColumns[$index] }}</th>
+			<th mat-header-cell *matHeaderCellDef mat-sort-header="{{ col }}">{{ displayedColumns[$index] }}</th>
 			<td mat-cell *matCellDef="let row">{{ row[col] }}</td>
 		</ng-container>
-		} }
+		}
 
 		<!-- Action Column -->
 		<ng-container matColumnDef="action">
 			<th mat-header-cell *matHeaderCellDef>Action</th>
 			<td mat-cell *matCellDef="let row">
 				@if (this.actions === undefined) {
-				<button mat-icon-button aria-label="expand row"
-					(click)="(expandedElement = expandedElement === row ? null : row); $event.stopPropagation()">
+				<button
+					mat-icon-button
+					aria-label="expand row"
+					(click)="expandedElement = expandedElement === row ? null : row; $event.stopPropagation()">
 					@if (expandedElement === row) {
 					<mat-icon>keyboard_arrow_up</mat-icon>
 					} @else {
@@ -36,31 +44,28 @@
 				<button mat-icon-button color="warn" (click)="delete(row)">
 					<mat-icon>delete</mat-icon>
 				</button>
-				}
-				@else {
-				@if (this.actions.includes('read')){
+				} @else { @if (this.actions.includes('read')){
 				<!-- <button (click)="openDetailDialog(row)" mat-icon-button color="primary">
 					<mat-icon>expand_more</mat-icon>
 				</button> -->
-				<button mat-icon-button aria-label="expand row"
-					(click)="(expandedElement = expandedElement === row ? null : row); $event.stopPropagation()">
+				<button
+					mat-icon-button
+					aria-label="expand row"
+					(click)="expandedElement = expandedElement === row ? null : row; $event.stopPropagation()">
 					@if (expandedElement === row) {
 					<mat-icon>keyboard_arrow_up</mat-icon>
 					} @else {
 					<mat-icon>keyboard_arrow_down</mat-icon>
 					}
 				</button>
-				}
-				@if (this.actions.includes('update')){
+				} @if (this.actions.includes('update')){
 				<button mat-icon-button color="primary" (click)="editData(row)">
 					<mat-icon>edit</mat-icon>
 				</button>
-				}
-				@if (this.actions.includes('delete')) {
+				} @if (this.actions.includes('delete')) {
 				<button mat-icon-button color="warn" (click)="delete(row)">
-					<mat-icon>delete</mat-icon>
-				</button>}
-				}
+					<mat-icon>delete</mat-icon></button
+				>} }
 			</td>
 		</ng-container>
 
@@ -70,13 +75,15 @@
 				<div class="element-detail w-100" [@detailExpand]="row == expandedElement ? 'expanded' : 'collapsed'">
 					<div class="element-diagram py-2 w-100">
 						@for (col of detailListProps; track $index) {
-						<div class="row g-0" style="font-size: 14px;">
-							<div class="fw-bold col-3 border border-1 border-secondary p-2"
-								style="word-break: break-all;">
-								{{this.detailDisplayedColumns[$index]}} :
+						<div class="row g-0" style="font-size: 14px">
+							<div
+								class="fw-bold col-3 border border-1 border-secondary p-2"
+								style="word-break: break-all">
+								{{ this.detailDisplayedColumns[$index] }} :
 							</div>
-							<div class="col-9 border border-1 border-secondary p-2" style="word-break: break-all;">
-								{{row[col]}}</div>
+							<div class="col-9 border border-1 border-secondary p-2" style="word-break: break-all">
+								{{ row[col] }}
+							</div>
 						</div>
 						}
 					</div>
@@ -88,10 +95,12 @@
 		<tr mat-row *matRowDef="let row; columns: displayedColumns"></tr> -->
 
 		<tr mat-header-row *matHeaderRowDef="columnsToDisplayWithExpand"></tr>
-		<tr mat-row *matRowDef="let row columns: columnsToDisplayWithExpand;" class="element-row"
+		<tr
+			mat-row
+			*matRowDef="let row; columns: columnsToDisplayWithExpand"
+			class="element-row"
 			[class.expanded-row]="expandedElement === row"
-			(click)="expandedElement = expandedElement === row ? null : row">
-		</tr>
+			(click)="expandedElement = expandedElement === row ? null : row"></tr>
 		<tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="detail-row"></tr>
 
 		<!-- Row shown when there is no matching data. -->
