--- a/FRONTEND/src/app/module/admin/level/add-form/add-form.component.html
+++ b/FRONTEND/src/app/module/admin/level/add-form/add-form.component.html
@@ -1,10 +1,10 @@
 <div class="d-flex flex-column w-100 h-100 align-items-cente justify-content-center"
 	style="padding: 30px; background: linear-gradient(to right, #364cc7, #cf6868); height: 500px; overflow-y: scroll;">
 	@if (this.isEditForm) {
-	<div class="fs-4 mx-auto text-white mb-3" style="font-weight: 500;">EDIT LANGUAGE</div>
+	<div class="fs-4 mx-auto text-white mb-3" style="font-weight: 500;">EDIT LEVEL</div>
 	}
 	@else {
-	<div class="fs-4 mx-auto text-white mb-3" style="font-weight: 500;">CREATE NEW LANGUAGE</div>
+	<div class="fs-4 mx-auto text-white mb-3" style="font-weight: 500;">CREATE NEW LEVEL</div>
 	}
 	<div class="p-2 mt-3 d-flex flex-column align-items-center" style="margin-left: 30px; margin-right: 30px;"
 		[formGroup]="this.addForm">
