--- a/FRONTEND/src/app/module/admin/report/report.component.html
+++ b/FRONTEND/src/app/module/admin/report/report.component.html
@@ -1,4 +1,52 @@
 <div class="container">
+	<diV class="fs-4 w-100 text-center">VIEW REPORT</diV>
+	<div class="row g-0">
+		<div class="col-4 p-3 rounded-3 d-flex flex-column align-items-center">
+			<div class="d-flex flex-column align-items-center" style="margin-left: 30px; margin-right: 30px;"
+				[formGroup]="this.formGroup">
+				<mat-form-field class="w-100">
+					<mat-label>Type</mat-label>
+					<mat-select formControlName="reportType">
+						<mat-option style="color: darkgoldenrod;"
+							[value]="this.reportType.APPLICATION">APPLICATION</mat-option>
+						<mat-option style="color: darkgreen;" [value]="this.reportType.INTERVIEW">INTERVIEW</mat-option>
+					</mat-select>
+				</mat-form-field>
+				<mat-form-field class="w-100">
+					<mat-label>Date</mat-label>
+					<mat-date-range-input [rangePicker]="picker">
+						<input matStartDate oninput="this.value=this.value.replace(/[^0-9\/]/g,'')"
+							formControlName="fromDate" placeholder="From date" #fromDatePicker>
+						<input matEndDate oninput="this.value=this.value.replace(/[^0-9\/]/g,'')"
+							formControlName="toDate" placeholder="To date" #toDatePicker>
+					</mat-date-range-input>
+					@if( fromDatePicker.value || toDatePicker.value){
+					<button (click)="fromDatePicker.value=''; toDatePicker.value='' ;
+					this.formGroup.get('fromDate')?.setValue(null); this.formGroup.get('toDate')?.setValue(null)" mat-icon-button>
+						<mat-icon style="color: red;">delete</mat-icon>
+					</button>
+					}
+					<mat-hint style="font-size: 13px; font-weight: 500; color: white;">DD/MM/YYYY –
+						DD/MM/YYYY</mat-hint>
+					<mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+					<mat-date-range-picker #picker></mat-date-range-picker>
+				</mat-form-field>
+			</div>
+			<div class="d-flex flex-column align-items-center">
+				<button class="my-1" (click)="saveReport()" mat-raised-button color="primary">Save This Report</button>
+				<button class="my-1" (click)="exportReport()" mat-raised-button color="accent">Download This
+					Report</button>
+			</div>
+		</div>
+		<div class="col-8">
+			<app-generic-table [dataInput]="viewReportDataInput" [displayedColumns]="viewReportDisplayedColumns"
+				[listProps]="viewReportListProps" [actions]="viewReportActions"
+				[detailListProps]="viewReportDetailListProps"
+				[detailDisplayedColumns]="viewReportDetailDisplayedColumns"></app-generic-table>
+		</div>
+	</div>
+	<diV class="fs-4 w-100 text-center" style="margin-top: 60px;">ALL REPORTS</diV>
 	<app-generic-table [dataInput]="listReports" [displayedColumns]="displayColumn" [listProps]="listProps"
-		[actions]="actions"></app-generic-table>
+		[actions]="actions" [detailDisplayedColumns]="detailDisplayedColumns" [detailListProps]="detailListProps"
+		[editData]="edit" [deleteData]="delete"></app-generic-table>
 </div>
