--- a/FrontEnd/src/app/layout/header/header.component.html
+++ b/FrontEnd/src/app/layout/header/header.component.html
@@ -16,11 +16,7 @@
 
 		<div class="d-none d-lg-inline col-lg-3 col-xl-4">
 			<div class="input-group">
-				<input
-					type="search"
-					class="form-control rounded"
-					placeholder="Search"
-					aria-label="Search"
+				<input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
 					aria-describedby="search-addon" />
 				<button type="button" class="btn btn-outline-primary text-white">search</button>
 			</div>
@@ -43,11 +39,7 @@
 		</div>
 		<div class="d-none d-sm-inline d-lg-none col-md-12">
 			<div class="input-group">
-				<input
-					type="search"
-					class="form-control rounded"
-					placeholder="Search"
-					aria-label="Search"
+				<input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
 					aria-describedby="search-addon" />
 				<button type="button" class="btn btn-outline-primary text-white">search</button>
 			</div>
@@ -56,11 +48,7 @@
 
 	<mat-toolbar-row class="d-sm-none">
 		<div class="input-group">
-			<input
-				type="search"
-				class="form-control rounded"
-				placeholder="Search"
-				aria-label="Search"
+			<input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
 				aria-describedby="search-addon" />
 			<button type="button" class="btn btn-outline-primary text-white">search</button>
 		</div>
@@ -74,6 +62,11 @@
 		<button mat-menu-item (click)="handleRouteToCVManage()">
 			<i class="fa-solid fa-file"></i>
 			<span class="mx-5 align-right">CV manage</span>
+		</button>
+
+		<button mat-menu-item (click)="handleRouteToRecruiterRegisterConsole()">
+			<i class="bi bi-person-fill-up fs-5"></i>
+			<span class="mx-5 align-right">Be A Recruiter</span>
 		</button>
 
 		@if(_isAdmin===true){
